--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,1 +1,1 @@
-pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
